[gd_scene load_steps=4 format=3 uid="uid://0gr6fdj6ml11"]

[ext_resource type="PackedScene" uid="uid://dxn12tbth5a8j" path="res://assets/mini_tank/mini_tank 23.03.27.obj" id="1_iyxmy"]
[ext_resource type="Script" uid="uid://d2t8o4q2kkton" path="res://mini_tank.gd" id="1_w4rh0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vppcw"]
size = Vector3(1.9378, 0.891182, 1.21242)

[node name="MiniTank" type="CharacterBody3D"]
script = ExtResource("1_w4rh0")

[node name="mini_tank 230327" parent="." instance=ExtResource("1_iyxmy")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_vppcw")

[node name="RearRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.611575)

[node name="FrontRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.605171)
